# life.log

./: .gitignore  pyproject.toml
enq/: __main__.py  config.toml  main.py
enq/assets/: default_config.toml
enq/cli/: args.py  editor.py  interface.py  menu.py
enq/core/: entry.py
enq/database/: connection.py
enq/utils/: cli.py
mypy_diary/: __main__.py  main.py
mypy_diary/assets/: default_config.toml
mypy_diary/cli/: args.py
mypy_diary/core/: entry.py  extra.py  handler.py
mypy_diary/services/: editor.py
mypy_diary/utils/: logger.py
scripts/setup/: dev.sh
