[build-system]
requires = ["setuptools", "wheel"]
requires-python = ">3.12.0"
build-backend = "setuptools.build_meta"

[project]
name = "mypy-diary"
version = "0.0.1"
dependencies = []

[project.scripts]
# This line creates the "magic" command:
# command_name = "package.file:function_name"
mypy-diary = "mypy_diary.main:main"
